[gd_scene load_steps=13 format=3 uid="uid://bmqtjuvs472ld"]

[ext_resource type="Script" path="res://bullet_test/bullet.gd" id="1_jf1js"]
[ext_resource type="Texture2D" uid="uid://43tek07dr3l7" path="res://icon.svg" id="2_87ibu"]
[ext_resource type="Texture2D" uid="uid://bfgdr5drtcnxx" path="res://texture_test/bullet_small_sheet..png" id="3_hatsy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g6jx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j6d84"]
atlas = ExtResource("3_hatsy")
region = Rect2(14, 0, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0gx6"]
atlas = ExtResource("3_hatsy")
region = Rect2(21, 0, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei8n8"]
atlas = ExtResource("3_hatsy")
region = Rect2(7, 0, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_m16p7"]
atlas = ExtResource("3_hatsy")
region = Rect2(14, 0, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_noguk"]
atlas = ExtResource("3_hatsy")
region = Rect2(0, 0, 7, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o2qt"]
atlas = ExtResource("3_hatsy")
region = Rect2(7, 0, 7, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpydv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6d84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0gx6")
}],
"loop": true,
"name": &"about_to_explode",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei8n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m16p7")
}],
"loop": true,
"name": &"about_to_explode_and_selected",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_noguk")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o2qt")
}],
"loop": false,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pwmx"]
size = Vector2(36, 38)

[node name="bullet" type="CharacterBody2D" groups=["bullet"]]
scale = Vector2(2, 1.5)
script = ExtResource("1_jf1js")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5g6jx")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_87ibu")

[node name="InitialTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.2, 4)
sprite_frames = SubResource("SpriteFrames_qpydv")

[node name="explosion_pos" type="Node2D" parent="."]
position = Vector2(16.5, 0)

[node name="FinalTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="bulletFinder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bulletFinder"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_0pwmx")

[connection signal="timeout" from="InitialTimer" to="." method="_on_initial_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="FinalTimer" to="." method="_on_final_timer_timeout"]
[connection signal="body_entered" from="bulletFinder" to="." method="_on_bullet_finder_body_entered"]
